# bgm_rename_cuby

./: Cargo.toml  GUI.PY  LICENSE  README.md  REDEME.md  bangumi_rename.py  build.rs  cuby_cli.py  hardlink.py
images/: ico.rc
src/: cuby_cli.py  lib.rs  main.rs  search.py
