[package]
name = "bgm_rename"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking","json"] }
serde_json = " 1.0.83"
jsonpath_lib = "0.3.0"
fltk = "1.3.12"
open = "3.0.2"

[profile.release]
lto = true
opt-level = 'z'
strip = true 
codegen-units = 1
panic = "abort"