[package]
name = "cuby"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.13"
jsonpath_lib = "0.3.0"
serde_json = "1.0.85"
reqwest = {version = "0.11.11",features = ["blocking","json"]}
rust-embed="6.4.0"
anitomy = "0.1.2"
rfd = "0.10.0"

[build-dependencies]
embed-resource = "1.7.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
